force-app/main/default/objects/Sentry_Incident__c/Sentry_Incident__c.object-meta.xml
<CustomObject>
    <description>Correlated security or reliability incidents composed from multiple Sentry events.</description>
    <label>Sentry Incident</label>
    <nameField>
        <displayFormat>SIN-{000000}</displayFormat>
        <label>Sentry Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>