force-app/main/default/objects/Sentry_Incident__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>