force-app/main/default/objects/Sentry_Incident__c/fields/Correlation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Rule__c</fullName>
    <label>Correlation Rule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>