force-app/main/default/objects/Sentry_Incident__c/fields/First_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Event__c</fullName>
    <label>First Event</label>
    <referenceTo>Sentry_Event__c</referenceTo>
    <relationshipLabel>First Event Incidents</relationshipLabel>
    <relationshipName>FirstEventIncidents</relationshipName>
    <type>Lookup</type>
</CustomField>