force-app/main/default/objects/Sentry_Incident__c/fields/Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Event__c</fullName>
    <label>Last Event</label>
    <referenceTo>Sentry_Event__c</referenceTo>
    <relationshipLabel>Last Event Incidents</relationshipLabel>
    <relationshipName>LastEventIncidents</relationshipName>
    <type>Lookup</type>
</CustomField>